2015-03-22  Araki Ken  <arakiken@users.sf.net>

	* x_display_linux.c: Hack for HankakuZenkaku key is added.

	* im_ibus.c:
	  - The argument of next_engine() is changed from im_ibus_t * to IBusInputContext *.
	  - ibus->is_enabled is reversed in switch_mode() on IBus 1.5.x.

2015-03-21  Araki Ken  <arakiken@users.sf.net>

	* MLActivity.java: /sdcard/.mlterm/anim*.gif isn't splited any more.

2015-03-20  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c: HAVE_PTHREAD is defined on android.

	* x_display.c, MLActivity.java: hashPath() -> convertToTmpPath() in order to
	  support not only /sdcard but also /mnt/sdcard and /extsdcard.

	* jni/Android.mk: -DBUILTIN_IMAGELIB is added.

2015-03-18  Araki Ken  <arakiken@users.sf.net>

	* kik_path.c, android/jni/x_display.c:
	  HOME directory on android is /sdcard, /mnt/sdcard or /extsdcard.

	* jni/Android.mk, build.sh: Minor fixes.

	* ml_screen.c, ml_vt100_parser.c: The previous commit is partially reverted.

2015-03-17  Araki Ken  <arakiken@users.sf.net>

	* x_event_source.c: If ml_pty_ssh_poll() > 0, ml_pty_ssh_send_recv_x11() and
	  ml_term_parse_vt100_sequence() are called immediately instead of 'break'
	  in order not to skip select().

	* ml_screen.[ch]:
	  - gettimeofday() is used instead of clock() in
	    ml_screen_enable_local_echo() and ml_screen_local_echo_wait().
	  - ml_stored_edit stores a current edit, not both normal and alt edits.
	  - ml_screen_is_local_echo_mode() is added.

	* kiklib/configure.in, kik_config.h.in, android/jni/kik_config.h:
	  Whether gettimeofday exists or not is checked. (HAVE_GETTIMEOFDAY macro)

	* xlib/x_connect_dialog.c: Memory leak is fixed.

	* libptyssh/ml_pty_ssh.c, ml_pty.c, ml_vt100_parser.c: Minor fixes.

2015-03-15  Araki Ken  <arakiken@users.sf.net>

	* x_display_wscons.c: WSDISPLAYIO_GET_FBINFO is supported.

	* Usage.win32: Updated.

	* version.h.in: 3.4.5 -> 3.4.5post

2015-03-14  Araki Ken  <arakiken@users.sf.net>

	* 3.4.5 released.
	  (tag "rel-3_4_5")
